
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_7__ TYPE_4__ ;
typedef struct TYPE_6__ TYPE_2__ ;
typedef struct TYPE_5__ TYPE_1__ ;


struct TYPE_7__ {int header; } ;
struct TYPE_6__ {char* desc; scalar_t__ banner; } ;
struct TYPE_5__ {int cwd; int pass; int user; } ;


 scalar_t__ cwd (int ) ;
 int debug ;
 int err (int ,char*) ;
 char* getmsg (char*) ;
 int getpwd () ;
 TYPE_4__ hostinf ;
 int offset_selected ;
 int printf (char*,char*) ;
 int putserv (char*,int ) ;
 TYPE_2__* spdata ;
 TYPE_2__* sptr ;
 scalar_t__ strlen (int ) ;
 scalar_t__ strncmp (char*,char*,int) ;
 scalar_t__ strstr (char*,scalar_t__) ;
 TYPE_1__ tesopt ;
 int xstrdup (char*) ;

void
log_into_ftp (void)
{
        char *line;
        char foundmatch=0;

        line = getmsg ("220 ");
        hostinf.header = xstrdup (line);

        if (!debug)
            printf("%s", line);
        if (!offset_selected) {
            for (sptr = spdata ; sptr->banner ; ++sptr) {
                if (strstr(line, sptr->banner)) {
                    foundmatch=1;
                    break;
                }
            }
            if (!foundmatch)
                err(0, "No offset selected, and no matching banner found!");
        }

        printf ("Using offsets from: %s\n", sptr->desc);

        putserv ("USER %s\n", tesopt.user);
        getmsg ("331 ");
        putserv ("PASS %s\n", tesopt.pass);
        line = getmsg ("230 ");
        if (strncmp ("5", line, 1) == 0)
                err (0, "login not accepted!\n");

        if (strlen (tesopt.cwd) > 0) {
                if (cwd (tesopt.cwd) == 0) {
                        err (0, "initial CWD failed.");
                }
        }

        getpwd ();

        return;
}
